--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/arrowIcon"
-        android:layout_width="@dimen/size_icon_normal"
-        android:layout_height="@dimen/size_icon_normal"
-        android:layout_marginLeft="@dimen/margin_normal"
-        android:layout_marginTop="@dimen/margin_larg"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/ic_arrow_back_24"/>
 
-
+<ImageButton
+    android:id="@+id/arrow_icon"
+    android:layout_width="@dimen/size_icon_normal"
+    android:layout_height="@dimen/size_icon_normal"
+    android:layout_marginLeft="@dimen/margin_normal"
+    android:background="@color/white"
+    android:layout_marginTop="@dimen/margin_larg"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    android:src="@drawable/ic_arrow_back_24"/>
     <TextView
         android:id="@+id/appbarTitle"
         android:layout_width="wrap_content"
@@ -32,7 +33,7 @@
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/main_image"
         android:layout_width="match_parent"
-        android:layout_height="160dp"
+        android:layout_height="170dp"
         android:layout_margin="@dimen/margin_normal"
         app:layout_constraintTop_toBottomOf="@id/appbarTitle"
         android:background="@drawable/background_icon"
@@ -44,13 +45,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name of meal"
+        android:layout_margin="12dp"
         android:textStyle="bold"
         android:gravity="start"
-        android:textColor="@color/black"
-        android:textSize="18dp"
+        android:textColor="@color/white"
+        android:textSize="20dp"
         android:layout_marginTop="@dimen/margin_normal"
+
         app:layout_constraintStart_toStartOf="@id/main_image"
-        app:layout_constraintTop_toBottomOf="@id/main_image" />
+        app:layout_constraintBottom_toBottomOf="@id/main_image" />
 
 
 
@@ -60,14 +63,14 @@
         android:id="@+id/pie_chart_details"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginTop="@dimen/margin_mid"
-        android:layout_marginBottom="@dimen/margin_mid"
+        android:layout_marginTop="@dimen/margin_normal"
+        android:layout_marginBottom="@dimen/margin_normal"
         android:elevation="2dp"
-        app:layout_constraintStart_toStartOf="@id/title_details"
-        app:layout_constraintTop_toBottomOf="@id/title_details" />
+        app:layout_constraintStart_toStartOf="@id/main_image"
+        app:layout_constraintTop_toBottomOf="@id/main_image" />
 
     <TextView
-        android:id="@+id/water_number"
+        android:id="@+id/carb_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="2dp"
@@ -75,18 +78,18 @@
         android:textSize="10sp"
         app:layout_constraintTop_toTopOf="@id/green_circle"
         app:layout_constraintStart_toEndOf="@id/green_circle"
-        android:text="216 g"/>
+        android:text="214 g"/>
 
     <TextView
         android:id="@+id/carbs_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="2dp"
-        android:text="Water"
+        android:text="Carbs"
         android:textSize="10sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@id/water_number"
-        app:layout_constraintTop_toBottomOf="@id/water_number"
+        app:layout_constraintStart_toStartOf="@id/carb_number"
+        app:layout_constraintTop_toBottomOf="@id/carb_number"
         />
 
     <View
@@ -105,7 +108,7 @@
 
 
     <TextView
-        android:id="@+id/sugare_number"
+        android:id="@+id/protein_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="2dp"
@@ -113,18 +116,18 @@
         android:textSize="10sp"
         app:layout_constraintTop_toTopOf="@id/red_circle"
         app:layout_constraintStart_toEndOf="@id/red_circle"
-        android:text="216 g"/>
+        android:text="211 g"/>
 
     <TextView
         android:id="@+id/carbs2_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="2dp"
-        android:text="Sugare"
+        android:text="Protein"
         android:textStyle="bold"
         android:textSize="10sp"
-        app:layout_constraintStart_toStartOf="@id/sugare_number"
-        app:layout_constraintTop_toBottomOf="@id/sugare_number"
+        app:layout_constraintStart_toStartOf="@id/protein_number"
+        app:layout_constraintTop_toBottomOf="@id/protein_number"
         />
 
     <View
@@ -174,6 +177,44 @@
         app:layout_constraintBottom_toBottomOf="@id/pie_chart_details"
         android:backgroundTint="#FAB131" />
 
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/icon_sugar"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:padding="@dimen/margin_small"
+        android:layout_marginBottom="@dimen/margin_mid"
+        android:background="@drawable/background_icon"
+        android:src="@drawable/ic_sugar"
+        app:layout_constraintBottom_toTopOf="@id/icon_a3"
+        app:layout_constraintStart_toStartOf="@id/main_image"
+        app:shapeAppearanceOverlay="@drawable/background_icon"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_mid"
+        android:text="Sugar"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@id/icon_sugar"
+        app:layout_constraintStart_toEndOf="@id/icon_sugar"
+        app:layout_constraintTop_toTopOf="@id/icon_sugar"
+        tools:ignore="MissingConstraints" />
+    <TextView
+        android:id="@+id/sugar_number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_mid"
+        android:text="12g"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@id/icon_sugar"
+        app:layout_constraintEnd_toEndOf="@id/main_image"
+        app:layout_constraintTop_toTopOf="@id/icon_sugar"
+        tools:ignore="MissingConstraints" />
+
+
+
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/icon_a3"
         android:layout_width="28dp"
@@ -218,7 +259,7 @@
         android:padding="@dimen/margin_small"
         android:layout_marginBottom="@dimen/margin_mid"
         android:background="@drawable/background_icon"
-        android:src="@drawable/ic_protein"
+        android:src="@drawable/ic_water"
         app:layout_constraintBottom_toTopOf="@id/icon_fat"
         app:layout_constraintStart_toStartOf="@id/main_image"
         app:shapeAppearanceOverlay="@drawable/background_icon"
@@ -228,18 +269,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_mid"
-        android:text="Protien"
+        android:text="Water"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/icon_d3"
         app:layout_constraintStart_toEndOf="@id/icon_d3"
         app:layout_constraintTop_toTopOf="@id/icon_d3"
         tools:ignore="MissingConstraints" />
     <TextView
-        android:id="@+id/protein_number"
+        android:id="@+id/water_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_mid"
-        android:text="15g"
+        android:text="14g"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/icon_d3"
         app:layout_constraintEnd_toEndOf="@id/main_image"
@@ -366,6 +407,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/radius_btn"
         android:text="add to Diary"
+        android:textColor="@color/white"
         android:textSize="14sp"
         android:layout_margin="@dimen/margin_normal"
         app:layout_constraintBottom_toBottomOf="parent"
