--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -46,13 +46,17 @@
     <item name="android:paddingLeft">29dp</item>
     <item name="android:paddingRight">25dp</item>
 </style>
-    <style name="linerlayout2" parent="linerlayout">
-       <item name="android:layout_marginTop">20dp</item>
-    </style>
+
     <style name="textview">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/black</item>
-
+        <item name="android:elevation">2dp</item>
+    </style>
+    <style name="textviewMarginStart" parent="textview">
+        <item name="android:layout_marginStart">20dp</item>
+    </style>
+    <style name="textviewMarginEnd" parent="textview">
+        <item name="android:layout_marginEnd">25dp</item>
     </style>
 
     <style name="reduceNormal">
